# earthminds-learn-sphere

./: .replit  README.md  config.py  database.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  schema.sql
frontend/: next.config.js  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/server/pages/: _error.js  index.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/pages/: index.js
frontend/components/: ChatInterface.js  GradingInterface.js  QuizInterface.js
frontend/pages/: grade.js  index.js  quiz.js  tutor.js
routers/: __init__.py  documents.py  grade.py  quiz.py  tutor.py
services/: __init__.py  ai_providers.py  ai_service.py  document_service.py  grading_service.py  quiz_service.py  vector_service.py
utils/: __init__.py  embeddings.py  prompts.py
